syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.jexpress.demo.grpc.proto.generated1";
option java_outer_classname = "Hello1Proto";

package hello1.rpc;

message Hello1Request {
  string callerTxId = 1;
  string firstName = 2;
  string lastName = 3;
}

message Hello1Response {
  string serverTxId = 1;
  uint32 errorCode = 2;
  string errorDesc = 3;
  string version = 4;
  uint64 cost = 5;
  string greeting = 6;
}

service Hello1Service {
  rpc ping(google.protobuf.Empty) returns (Hello1Response);
  rpc hello1(Hello1Request) returns (Hello1Response);
}
